[package]
name = "learn_rust_hickory_Dns"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
clap = { version = "4.5.16", features = ["derive", "env"] }
hickory-server = "0.24.1"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
